force-app/main/default/objects/PortCode__c/PortCode__c.object-meta.xml
<CustomObject>
    <label>Port Code</label>
    <nameField>
        <label>Port Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Port Code</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>