force-app/main/default/objects/PortCode__c/fields/CodeofWarehouse__c.field-meta.xml
<CustomField>
    <fullName>CodeofWarehouse__c</fullName>
    <label>Code of Warehouse</label>
    <length>25</length>
    <type>Text</type>
</CustomField>