force-app/main/default/objects/PortCode__c/fields/Port_Code_for_Customs_System__c.field-meta.xml
<CustomField>
    <fullName>Port_Code_for_Customs_System__c</fullName>
    <label>Port Code for Customs System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>