force-app/main/default/objects/PortCode__c/fields/Port_Code_Short__c.field-meta.xml
<CustomField>
    <fullName>Port_Code_Short__c</fullName>
    <label>Port Code (Short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>