force-app/main/default/objects/PortCode__c/fields/Port_ID__c.field-meta.xml
<CustomField>
    <fullName>Port_ID__c</fullName>
    <label>Port ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>