force-app/main/default/objects/PortCode__c/fields/Port_Type__c.field-meta.xml
<CustomField>
    <fullName>Port_Type__c</fullName>
    <label>Port Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>LAND</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>