force-app/main/default/objects/PortCode__c/fields/PortCode__c.field-meta.xml
<CustomField>
    <fullName>PortCode__c</fullName>
    <label>Port Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>