force-app/main/default/objects/PortCode__c/fields/PortCommonName__c.field-meta.xml
<CustomField>
    <fullName>PortCommonName__c</fullName>
    <label>Port Common Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>