force-app/main/default/objects/PortCode__c/fields/PortNameVietnamese__c.field-meta.xml
<CustomField>
    <fullName>PortNameVietnamese__c</fullName>
    <label>Port Name (Vietnamese)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>