force-app/main/default/objects/PortCode__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>VN&apos;s Regions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bắc</fullName>
            </value>
            <value>
                <fullName>Trung</fullName>
            </value>
            <value>
                <fullName>Nam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>