force-app/main/default/objects/PortCode__c/fields/Standard_Port_Code__c.field-meta.xml
<CustomField>
    <fullName>Standard_Port_Code__c</fullName>
    <label>Standard Port Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>