force-app/main/default/objects/PortCode__c/fields/VendorDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>VendorDetailInformation__c</fullName>
    <label>Vendor Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>