force-app/main/default/objects/PortCode__c/fields/ZONE__c.field-meta.xml
<CustomField>
    <fullName>ZONE__c</fullName>
    <formula>text( Country__r.Zone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZONE</label>
    <type>Text</type>
</CustomField>