force-app/main/default/objects/PortCode__c/listViews/AirPort.listView-meta.xml
<ListView>
    <fullName>AirPort</fullName>
    <columns>NAME</columns>
    <columns>Port_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Port_Code_Short__c</columns>
    <columns>Port_ID__c</columns>
    <columns>Standard_Port_Code__c</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Port_Type__c</field>
        <operation>equals</operation>
        <value>AIR</value>
    </filters>
    <label>Air Port</label>
</ListView>