force-app/main/default/objects/PortCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Country__c</columns>
    <columns>Standard_Port_Code__c</columns>
    <columns>Port_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PortNameVietnamese__c</columns>
    <columns>Region__c</columns>
    <columns>Province__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>contains</operation>
        <value>Cambodia</value>
    </filters>
    <label>All Records</label>
</ListView>