force-app/main/default/objects/PortCode__c/listViews/PortInLand.listView-meta.xml
<ListView>
    <fullName>PortInLand</fullName>
    <columns>PortCode__c</columns>
    <columns>NAME</columns>
    <columns>Port_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Port_Code_Short__c</columns>
    <columns>Port_ID__c</columns>
    <columns>Standard_Port_Code__c</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Port_Type__c</field>
        <operation>equals</operation>
        <value>LAND</value>
    </filters>
    <label>Port In Land</label>
</ListView>