force-app/main/default/objects/PortCode__c/listViews/SeaPort.listView-meta.xml
<ListView>
    <fullName>SeaPort</fullName>
    <columns>Standard_Port_Code__c</columns>
    <columns>NAME</columns>
    <columns>Port_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Country__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Port_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Port_Type__c</field>
        <operation>equals</operation>
        <value>SEA</value>
    </filters>
    <label>Sea Port</label>
</ListView>